force-app/main/default/objects/Loan_Facility_Config__c/Loan_Facility_Config__c.object-meta.xml
<CustomObject>
    <label>Loan Facility Config</label>
    <nameField>
        <displayFormat>LFC-{00000000}</displayFormat>
        <label>Loan Facility Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Facility Configs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>