force-app/main/default/objects/Loan_Facility_Config__c/fields/First_Principal_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Principal_Due_Date__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Principal First Due Date returned from the Repayment Calculation Service (CAP)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Principal Due Date</label>
    <type>DateTime</type>
</CustomField>