force-app/main/default/objects/Loan_Facility_Config__c/fields/Loan_Facility_Config_Id__c.field-meta.xml
<CustomField>
    <fullName>Loan_Facility_Config_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Unique UUID created to store the Loan Details aka Product Preferences</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Loan Facility Config Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>