force-app/main/default/objects/Loan_Facility_Config__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>The version of the details provided from GCP</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>